--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -235,6 +235,7 @@ set(viewer_SOURCE_FILES
     lllandmarklist.cpp
     lllogchat.cpp
     llloginhandler.cpp
+    llsavedlogins.cpp
     llmanip.cpp
     llmaniprotate.cpp
     llmanipscale.cpp
@@ -650,6 +651,7 @@ set(viewer_HEADER_FILES
     lllightconstants.h
     lllogchat.h
     llloginhandler.h
+    llsavedlogins.h
     llmanip.h
     llmaniprotate.h
     llmanipscale.h
