--- a/indra/llplugin/CMakeLists.txt
+++ b/indra/llplugin/CMakeLists.txt
@@ -2,9 +2,9 @@
 
 project(llplugin)
 
-if(HAVE_64_BIT)
+if (WORD_SIZE EQUAL 64)
 	set(REQUIRE_PIC)
-endif(HAVE_64_BIT)
+endif(WORD_SIZE EQUAL 64)
 
 include(00-Common)
 include(LLCommon)
@@ -52,13 +52,13 @@ set(llplugin_HEADER_FILES
 set_source_files_properties(${llplugin_HEADER_FILES}
                             PROPERTIES HEADER_FILE_ONLY TRUE)
 
-if(HAVE_64_BIT)
+if(WORD_SIZE EQUAL 64)
 	if(WINDOWS)
 		add_definitions(/FIXED:NO)
 	else(WINDOWS) # not windows therefore gcc LINUX and DARWIN
 		add_definitions(-fPIC)
 	endif(WINDOWS)
-endif (HAVE_64_BIT)
+endif (WORD_SIZE EQUAL 64)
 
 list(APPEND llplugin_SOURCE_FILES ${llplugin_HEADER_FILES})
 
