--- a/indra/media_plugins/gstreamer010/CMakeLists.txt
+++ b/indra/media_plugins/gstreamer010/CMakeLists.txt
@@ -54,12 +54,14 @@ set(media_plugin_gstreamer010_HEADER_FILES
     llmediaimplgstreamertriviallogging.h
     )
 
-if (${CXX_VERSION} MATCHES "4[23].")
+# CXX_VERSION needs triming to be able to do numeric comparison
+STRING(REGEX REPLACE ".* ([0-9])\\.([0-9])\\.([0-9]).*" "\\1\\2\\3" CXX_VERSION ${CXX_VERSION})
+if (${CXX_VERSION} GREATER 419)
     # Work around a bad interaction between broken gstreamer headers and
-    # g++ 4.3's increased strictness.
+    # g++ 4.2's increased strictness.
     set_source_files_properties(llmediaimplgstreamervidplug.cpp PROPERTIES
                                 COMPILE_FLAGS -Wno-write-strings)
-endif (${CXX_VERSION} MATCHES "4[23].")
+endif (${CXX_VERSION} GREATER 419)
 
 add_library(media_plugin_gstreamer010
     SHARED
